@@ -94,6 +94,11 @@ All:
   "Events generated by the user vs programmatically generated events" paragraph
   in the "Event handling overview" topic for more info
 
+Unix Ports:
+
+- Added autopackage for wxGTK and an example of using autopackage for a wx
+  program (Francesco Montorsi)
+
 All (GUI):
 
 - Support for right-to-left text layout (started by Diaa Sami during Google Summer of
